# zarrmony-snouty

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-tifffile-over-bioio.md
src/zarrmony_snouty/: __init__.py  _deshear.py  _metadata.py  adapter.py  match.py
tests/: conftest.py  test_adapter.py  test_deshear.py  test_install_smoke.py  test_match.py  test_metadata.py  test_plugin_open.py
